# depthyn

./: .gitignore  MEMORY.md  README.md  pyproject.toml
docs/: architecture.md  mmdet3d_setup.md
examples/zones/: 3-17-094022-demo.json  sample-yard.json
src/depthyn/: __init__.py  cli.py  comparison.py  config.py  ml_prep.py  mmdet3d_replay.py  models.py  pipeline.py  viewer.py
src/depthyn/detectors/: __init__.py  base.py  baseline.py  factory.py  mmdet3d.py  onnx_centerpoint.py  openpcdet.py  precomputed.py
src/depthyn/evaluation/: debug_export.py  ground_truth.py  matching.py  metrics.py  runner.py
src/depthyn/perception/: __init__.py  background.py  clustering.py  ground.py  preprocess.py
src/depthyn/pose/: __init__.py  gps.py
src/depthyn/rules/: __init__.py  zones.py
src/depthyn/scene/: __init__.py  state.py
src/depthyn/source/: __init__.py  converted_csv.py  ouster_pcap.py
src/depthyn/tracking/: __init__.py  simple.py
tests/: test_clustering.py  test_detectors.py  test_gps_pose.py  test_ml_prep.py  test_mmdet3d_replay.py  test_mmdet3d_runner.py  test_onnx_centerpoint.py  test_ouster_pcap.py  test_pipeline.py  test_tracker.py  test_viewer_service.py  test_zones.py
tools/: download_models.py  mmdet3d_runner.py  openpcdet_runner.py
viewer/: app.js  index.html  styles.css  viewer3d.css  viewer3d.html  viewer3d.js
