[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "depthyn"
version = "0.1.0"
description = "3D tracking and scene intelligence from LiDAR."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex for Wicksense" }
]

[project.scripts]
depthyn = "depthyn.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

